feat: bump node to 1.7.0 (#863)
* feat: bump node to 1.7.0

* chore: bump app version

* fix: snapshot extract location

* chore: chinese translations

* chore: bump ain to v1.7.0-rc.5

* chore: bump to rc.6

* feat: added wechat links

* chore: bump node to 1.7.0

* chore: bump electron 13

--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -120,7 +120,8 @@
       "helpTextFooterLine1": "DeFiChain is a community-driven and open project.",
       "helpTextFooterLine2": "The DeFiChain Foundation does not provide direct support.",
       "section": "Section",
-      "wiki": "Community Wiki"
+      "wiki": "Community Wiki",
+      "wechat": "WeChat"
     },
     "masterNodes": {
       "masterNodesPage": {
