chore: bump to 2.4.0-rc.4 and node 1.7.2 (#884)
* chore: bump to 2.4.0-rc.4 and node 1.7.2

* update text

* chore: zh

--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -918,7 +918,7 @@
     "restartNowNotice": "Restart now",
     "restartLaterNotice": "Later",
     "showUpdateAvailableHeader": "An update is available for DeFi Wallet",
-    "showUpdateAvailableNotice": "Would you like to update?",
+    "showUpdateAvailableNotice": "Would you like to update? Kindly leave DeFi Wallet running for next 30 minutes, pruning work will take place and result in reduce storage required on your computer (~4GB).",
     "yesShowUpdateAvailableButton": "Update",
     "noShowUpdateAvailableButton": "Not now",
     "startUpdateLabel": "Initiating update",
@@ -976,7 +976,7 @@
     "exit": "Exit",
     "deletePeersAndBlocks": "Delete peers and blocks",
     "walletBackupWarning": "Wallet has been encrypted successfully. Please backup your wallet immediately. Do you want to proceed?",
-    "nodeVersionUpdate": "The node has been updated to version %{version}. A restart is required for re-indexing and changes to take effect. Do you want to restart now?",
+    "nodeVersionUpdate": "The node has been updated to version %{version}. A restart is required for re-indexing and changes to take effect. Do you want to restart now? Kindly leave DeFi Wallet running for next 30 minutes, pruning work will take place and result in reduce storage required on your computer (~4GB).",
     "nodeVersionHeader": "Node update",
     "masternodesAlert": "You are currently running a masternode. Minting will not work on a locked wallet. Do you want to proceed?",
     "downloadSnapshot": "Download snapshot",
