chore: bump app to 2.4.0 and updated snapshot index (#885)
* chore: bump packages

* chore: text

* update size

--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -891,7 +891,7 @@
     "restartNowNotice": "Jetzt neu starten",
     "restartLaterNotice": "Später",
     "showUpdateAvailableHeader": "Ein Update ist für die DeFi Wallet verfügbar",
-    "showUpdateAvailableNotice": "Möchtest Du updaten?",
+    "showUpdateAvailableNotice": "Möchtest Du updaten? Bitte lass DeFi Wallet für die nächsten 30 Minuten laufen, dann wird das Pruning durchgeführt und der benötigte Speicherplatz auf deinem Computer reduziert (~5GB).",
     "yesShowUpdateAvailableButton": "Update",
     "noShowUpdateAvailableButton": "Nicht jetzt",
     "startUpdateLabel": "Update einleiten",
@@ -949,7 +949,7 @@
     "exit": "Beenden",
     "deletePeersAndBlocks": "Peers und Blöcke löschen",
     "walletBackupWarning": "Verschlüsselung der Wallet erfolgreich. Bitte erstelle sofort ein Backup deiner Wallet. Möchtest du fortfahren?",
-    "nodeVersionUpdate": "Node wurde auf Version %{version} upgedatet. Ein App Reindex ist erforderlich. Möchtest du jetzt neu starten?",
+    "nodeVersionUpdate": "Node wurde auf Version %{version} upgedatet. Ein App Reindex ist erforderlich. Möchtest du jetzt neu starten? Bitte lass DeFi Wallet für die nächsten 30 Minuten laufen, dann wird das Pruning durchgeführt und der benötigte Speicherplatz auf deinem Computer reduziert (~5GB).",
     "nodeVersionHeader": "Node update",
     "masternodesAlert": "Du betreibst derzeit einen Masternode. Das Minten wird auf einer gesperrten Wallet nicht funktionieren. Möchtest du trotzdem fortfahren?",
     "downloadSnapshot": "Download snapshot",
