caching issues, mn issues, improvements on usability, translations (#902)
* add -rescan and cache fixes

* fix: rescan option

* fix: temporary return mn ismine

* fix: MN updates

* fix: APY to APR

* feat: added tooltip on icons

* chore: bump app to v2.4.2-rc.1

* feat: rescan option in settings page

--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -455,7 +455,7 @@
         "liquidity": "Liquidität",
         "volume": "Volumen",
         "apy": "APY",
-        "apyTooltipMessage": "Der hier angegebene APY beinhaltet nur DFI-Anreize, ohne Provision. Tatsächliches APY mit Provision ist also mehr.",
+        "apyTooltipMessage": "Der hier angegebene APR beinhaltet nur DFI-Anreize, ohne Provision. Tatsächliches APR mit Provision ist also mehr.",
         "totalLiquidity": "Gesamtliquidität (USD)",
         "addRemoveLiquidity": "Liquidität hinzufügen oder entfernen",
         "addLiquidity": "LIQUIDITÄT HINZUFÜGEN",
@@ -891,7 +891,7 @@
     "restartNowNotice": "Jetzt neu starten",
     "restartLaterNotice": "Später",
     "showUpdateAvailableHeader": "Ein Update ist für die DeFi Wallet verfügbar",
-    "showUpdateAvailableNotice": "Möchtest Du updaten? Bitte lass DeFi Wallet für die nächsten 30 Minuten laufen, dann wird das Pruning durchgeführt und der benötigte Speicherplatz auf deinem Computer reduziert (~5GB).",
+    "showUpdateAvailableNotice": "Möchtest Du updaten? Bitte lass DeFi Wallet für die nächsten 30 Minuten laufen, dann wird das Pruning durchgeführt und der benötigte Speicherplatz auf deinem Computer reduziert.",
     "yesShowUpdateAvailableButton": "Update",
     "noShowUpdateAvailableButton": "Nicht jetzt",
     "startUpdateLabel": "Update einleiten",
@@ -949,7 +949,7 @@
     "exit": "Beenden",
     "deletePeersAndBlocks": "Peers und Blöcke löschen",
     "walletBackupWarning": "Verschlüsselung der Wallet erfolgreich. Bitte erstelle sofort ein Backup deiner Wallet. Möchtest du fortfahren?",
-    "nodeVersionUpdate": "Node wurde auf Version %{version} upgedatet. Ein App Reindex ist erforderlich. Möchtest du jetzt neu starten? Bitte lass DeFi Wallet für die nächsten 30 Minuten laufen, dann wird das Pruning durchgeführt und der benötigte Speicherplatz auf deinem Computer reduziert (~5GB).",
+    "nodeVersionUpdate": "Node wurde auf Version %{version} upgedatet. Ein App Reindex ist erforderlich. Möchtest du jetzt neu starten? Bitte lass DeFi Wallet für die nächsten 30 Minuten laufen, dann wird das Pruning durchgeführt und der benötigte Speicherplatz auf deinem Computer reduziert.",
     "nodeVersionHeader": "Node update",
     "masternodesAlert": "Du betreibst derzeit einen Masternode. Das Minten wird auf einer gesperrten Wallet nicht funktionieren. Möchtest du trotzdem fortfahren?",
     "downloadSnapshot": "Download snapshot",
