--- a/webapp/src/translations/languages/zht.json
+++ b/webapp/src/translations/languages/zht.json
@@ -461,7 +461,7 @@
         "liquidity": "流動資金",
         "volume": "交易量",
         "apy": "年收益率",
-        "apyTooltipMessage": "顯示的年回報率僅包括DFI獎勵，而不包括傭金。包括傭金在內的年回報率實際上會更高",
+        "apyTooltipMessage": "此處所示僅包括DFI獎勵，不含佣金。實際年利率含 佣金會是更多",
         "totalLiquidity": "總流動資金額（美元）",
         "addRemoveLiquidity": "添加或退出流動資金",
         "addLiquidity": "添加流動資金",
@@ -610,7 +610,9 @@
       "lockWithPassphrase": "用密碼短語鎖定",
       "passpharaseInfo": "用密碼短語保護您電腦上的錢包數據。",
       "resetAndReindex": "重置和重新索引",
-      "resetAndReindexInfo": "删除現有的鄰居節點和區塊數據，重新下載數據，然後重新索引（重建區塊鏈資料庫）。"
+      "resetAndReindexInfo": "删除現有的鄰居節點和區塊數據，重新下載數據，然後重新索引（重建區塊鏈資料庫）。",
+      "rescan": "重新掃描",
+      "rescanInfo": "重新啟動節點並掃描任還沒列出的"
     },
     "wallet": {
       "createOrRestoreWalletPage": {
@@ -996,7 +998,8 @@
     "snapshotSize": "快照大小:",
     "snapshotDirectory": "快照目錄:",
     "notEnoughDiskSpace": "您沒有足够的磁碟空間來下載和應用快照.",
-    "deleteSnapshotOnRestart": "刪除快照並重啟"
+    "deleteSnapshotOnRestart": "刪除快照並重啟",
+    "exitWallet": "退出錢包"
   },
   "general": {
     "defiApp": "遞飛鏈程序",
